<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.story.NewStoryActivity">

    <!-- CardView for Rounded Corners -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="368dp"
        android:layout_height="259dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/pict"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />
    </androidx.cardview.widget.CardView>

    <!-- Button Layout -->
    <LinearLayout
        android:id="@+id/btnLays"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@id/cardView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/btnCams"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/camera"
            android:paddingHorizontal="50dp" />

        <Button
            android:id="@+id/btnGals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/galery"
            android:layout_marginStart="20dp"
            android:paddingHorizontal="50dp" />
    </LinearLayout>

    <!-- Description Input Layout -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descTextLays"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/add_desc"
        app:layout_constraintTop_toBottomOf="@id/btnLays"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/descTextEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start"
            android:ems="10" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Submit Button -->

    <!-- ProgressBar -->
    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="100dp"
        android:text="@string/submit"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descTextLays"
        app:layout_constraintVertical_bias="1.0" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>